docs: 更新 cache-with-redis-demo 專案配置和核心類別
- 更新 pom.xml 專案配置
- 優化主應用程式 SpringBucksApplication
- 更新 BaseEntity、Coffee、CoffeeOrder 實體與 MoneyConverter
- 完善 CoffeeService 和 CoffeeOrderService 服務層
- 調整 application.properties 配置
- README 已包含完整的專案說明和使用指南